# chrono-clairvoyant

./: .dockerignore  .env  .env.production.example  .gitignore  CLIENT IDEA.md  CONTEXT.md  Caddyfile  Dockerfile  NEXT_PLAN_CONTEXT.md  README.md  deploy.sh  docker-compose.yml  index.html  package-lock.json  package.json  playwright-fixture.ts  playwright.config.ts  tailwind.config.ts  vite.config.ts
.github/workflows/: gh-pages.yml
backend/: .env.example  app.py  config.py  pyproject.toml  requirements.txt  run.py
backend/data/: watches.db
backend/routes/: __init__.py  analyze.py  correct.py  identify.py  market.py
backend/services/: ai_service.py  brand_agent_service.py  db_service.py  fusion_service.py  playwright_service.py  rag_service.py  session_store.py
backend/services/scrapers/: base.py  chrono24.py
public/: 404.html
src/: App.tsx  index.css
src/components/: AddToPortfolioModal.tsx  AnalysisFeed.tsx  BrandMarquee.tsx  CorrectionPanel.tsx  DashboardKPI.tsx  Footer.tsx  Hero.tsx  IdentifierTabs.tsx  LiquidityBadge.tsx  Navbar.tsx  OpportunityCard.tsx  PurchaseEvaluator.tsx  SettingsModal.tsx  TrustSection.tsx
src/components/ui/: button.tsx
src/data/: mockData.ts
src/hooks/: usePortfolio.ts  useSettings.ts
src/integrations/supabase/: client.ts  types.ts
src/pages/: Dashboard.tsx  Database.tsx  Index.tsx  MarketAnalysis.tsx  OpportunityRadar.tsx  Portfolio.tsx  Result.tsx
src/types/: watch.ts
supabase/: config.toml
supabase/migrations/: 20260324001712_d6902ee9-9c85-48db-af5c-bf80aa410386.sql
(+1 files in other folders)
